# PacketForge

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  capture-real-reference.sh  pyproject.toml  real-vs-synth.sh  realism-scorecard.json
detection/: README.md  example.rules  malware-ja3.rules
docs/: DESIGN.md  ROADMAP.md  capabilities.md  cloud-baselines.md  cross-validation.md  detection-ci.md  feasibility-evidence.md  inert-by-construction.md  realism-audit.md  realism-baselining.md  realism-scorecard.md  realism-validation-plan.md
examples/: README.md  cloud-intrusion.GROUND_TRUTH.json  cloud-intrusion.GROUND_TRUTH.md  cloud-intrusion.html  cloud-intrusion.pcap  home-baseline.html  home-baseline.pcap  office-intrusion.GROUND_TRUTH.json  office-intrusion.html  office-intrusion.pcap  ot-plc-traffic.html  ot-plc-traffic.pcap
flows/: c2_beacon.yaml  extraction.yaml  openai-hf-exploitgym.GROUND_TRUTH.json  openai-hf-exploitgym.GROUND_TRUTH.md  openai-hf-exploitgym.yaml
poc/: README.md  beacon.pcap  pcap_poc.py
samples/: README.md
scripts/: baseline_panel.py  demo.sh  make-examples.sh  make-samples.sh
tests/: conftest.py  test_blind_panel.py  test_bundle.py  test_bzar_pack.py  test_c2_transfer.py  test_cli.py  test_cloud.py  test_compose.py  test_coverage_corpus.py  test_crossval_transfer.py  test_detect.py  test_detection_ci.py  test_determinism.py  test_ef_integration.py  test_encrypted_dns.py  test_evaluate.py  test_evasions.py  test_fingerprint_realism.py  test_fingerprints_ja4.py  test_flowspec.py  test_fragment.py  test_inertness_all_attacks.py  (+21 more)
(+170 files in other folders)
