[project]
name = "packetforge"
version = "0.0.1"
description = "Deterministic, validated synthetic PCAPs consistent with the EvidenceForge incident model"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Peter Hanily" }]
keywords = ["pcap", "network", "forensics", "threat-hunting", "synthetic-data", "zeek", "evidenceforge"]

# Runtime deps. scapy is the packet backend (same choice as Flowsynth).
dependencies = [
    "scapy>=2.6",
    "pydantic>=2.0",   # typed Flow IR, matching EvidenceForge's modeling approach
    "pyyaml>=6.0",     # FlowSet YAML loading
    "cryptography>=42", # deterministic X.509 certs presented in TLS handshakes
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Gate 2 (realism audit): the classifier-two-sample-test adversary + distances.
realism = [
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "numpy>=1.24",
]

[project.scripts]
packetforge = "packetforge.cli:main"

# Validation harness depends on EXTERNAL tools, not Python packages:
#   zeek, tshark  (and optionally suricata) must be on PATH.
# The round-trip gate (docs/DESIGN.md §7) shells out to these.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/packetforge"]

[tool.ruff]
line-length = 100
target-version = "py39"
